# ME4857Assignment2

install/: local_setup.sh  setup.sh
install/gazebo_worlds/share/gazebo_worlds/: package.sh  package.xml
install/gazebo_worlds/share/gazebo_worlds/cmake/: gazebo_worldsConfig.cmake
install/gazebo_worlds/share/gazebo_worlds/worlds/: assignment_world.sdf
install/robot_model/share/ament_index/resource_index/package_run_dependencies/: robot_model
install/robot_model/share/ament_index/resource_index/parent_prefix_path/: robot_model
install/robot_model/share/robot_model/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_model/share/robot_model/cmake/: robot_modelConfig-version.cmake  robot_modelConfig.cmake
install/robot_model/share/robot_model/config/: joint_names_robot_model.yaml
install/robot_model/share/robot_model/environment/: ament_prefix_path.dsv  path.dsv
install/robot_model/share/robot_model/launch/: display.launch  display.launch.py  gazebo.launch.py
install/robot_model/share/robot_model/launch/install/: .colcon_install_layout  COLCON_IGNORE  _local_setup_util_ps1.py  _local_setup_util_sh.py  local_setup.bash  setup.sh  (+6 more)
install/robot_model/share/robot_model/meshes/: base_link.STL  link_BL.STL  link_BR.STL  link_FL.STL  link_FR.STL  link_ML.STL  link_MR.STL
install/robot_model/share/robot_model/urdf/: robot_model - Copy.urdf:Zone.Identifier  robot_model.csv  robot_model.urdf  robot_model.urdf:Zone.Identifier
install/robot_model/share/robot_model/worlds/: assignment_world.sdf
log/: latest_build
src/gazebo/: CMakeLists.txt
src/gazebo/world/: assignment_world.sdf
src/robot_model/: CMakeLists.txt  package.xml
src/robot_model/config/: joint_names_robot_model.yaml
src/robot_model/launch/: display.launch.py  gazebo.launch.py
src/robot_model/meshes/: base_link.STL  link_FL.STL  link_MR.STL
src/robot_model/urdf/: robot_model.csv  robot_model.urdf
(+1 files in other folders)
